updated names for impact and technical module/components

--- a/src/app/impact/impact/impact.component.html
+++ b/src/app/impact/impact/impact.component.html
@@ -2,6 +2,6 @@
   impact works!
 </p>
 
-<app-dyfi-summary></app-dyfi-summary>
-<app-shakemap-summary></app-shakemap-summary>
-<app-pager-summary></app-pager-summary>
+<app-impact-dyfi-summary></app-impact-dyfi-summary>
+<app-impact-shakemap-summary></app-impact-shakemap-summary>
+<app-impact-pager-summary></app-impact-pager-summary>
