--- a/src/app/impact/impact/impact.component.html
+++ b/src/app/impact/impact/impact.component.html
@@ -2,6 +2,6 @@
   impact works!
 </p>
 
-<app-impact-dyfi-summary></app-impact-dyfi-summary>
-<app-impact-shakemap-summary></app-impact-shakemap-summary>
-<app-impact-pager-summary></app-impact-pager-summary>
+<impact-dyfi-summary></impact-dyfi-summary>
+<impact-shakemap-summary></impact-shakemap-summary>
+<impact-pager-summary></impact-pager-summary>
