Create origin pin component

--- a/src/app/executive/executive/executive.component.html
+++ b/src/app/executive/executive/executive.component.html
@@ -1,6 +1,10 @@
 <ng-container *ngIf="eventService.event$ | async; let event">
 
-  <app-origin-pin></app-origin-pin>
+  <ul class="executive-summary-pins">
+    <li class="executive-summary-pin">
+      <app-origin-pin class="pin-view"></app-origin-pin>
+    </li>
+  </ul>
 
   <shared-text-product
       *ngFor="let product of event.getProducts('general-text')"
