--- a/src/app/executive/executive/executive.component.html
+++ b/src/app/executive/executive/executive.component.html
@@ -1,5 +1,4 @@
 <ng-container *ngIf="eventService.event$ | async; let event">
-
   <ul class="executive-summary-pins">
     <li class="executive-summary-pin">
       <app-origin-pin class="pin-view"
@@ -7,8 +6,13 @@
           [event]="event">
       </app-origin-pin>
     </li>
+    <li class="executive-summary-pin">
+      <app-regional-pin class="pin-view"
+          [contributors]="contributorService.contributors$ | async"
+          [event]="event">
+      </app-regional-pin>
+    </li>
   </ul>
-
   <shared-text-product
       *ngFor="let product of event.getProducts('general-text')"
       [product]="product">
