--- a/src/app/executive/regional-pin/regional-pin.component.css
+++ b/src/app/executive/regional-pin/regional-pin.component.css
@@ -1,6 +1,17 @@
 #region-info-map {
   background: #eee;
   height: 200px;
-  margin: 0 -24px 16px -24px;
-  width: calc(100% + 48px);
+}
+
+/*** mat-card-image-(like) styles for other elements such as leaflet maps ***/
+.full-width {
+  margin: 0 -16px 16px -16px;
+  width: calc(100% + 32px);
+}
+
+@media screen and (min-width: 600px) {
+  .full-width {
+    margin: 0 -24px 16px -24px;
+    width: calc(100% + 48px);
+  }
 }
