--- a/src/app/executive/regional-pin/regional-pin.component.html
+++ b/src/app/executive/regional-pin/regional-pin.component.html
@@ -8,7 +8,7 @@
       <span [innerHTML]="product | contributorList:event:contributors"></span>
     </mat-card-subtitle>
     <mat-card-content>
-      <div id="region-info-map"></div>
+      <div id="region-info-map" class="full-width"></div>
     </mat-card-content>
     <mat-card-actions>
       <a mat-button color="primary" [routerLink]="'../region-info'">
