--- a/src/app/executive/executive/executive.component.html
+++ b/src/app/executive/executive/executive.component.html
@@ -1,10 +1,10 @@
 <ng-container *ngIf="eventService.event$ | async; let event">
   <ul class="executive-summary-pins">
     <li class="executive-summary-pin">
-      <app-origin-pin class="pin-view"
+      <origin-pin class="pin-view"
           [contributors]="contributorService.contributors$ | async"
           [event]="event">
-      </app-origin-pin>
+      </origin-pin>
     </li>
     <li class="executive-summary-pin">
       <app-regional-pin class="pin-view"
