--- a/src/app/impact/impact/impact.component.html
+++ b/src/app/impact/impact/impact.component.html
@@ -1,7 +1,29 @@
-<p>
-  impact works!
-</p>
+<ng-container *ngIf="eventService.event$ | async; let event">
+  <impact-dyfi-summary [products]="event.getProducts('dyfi')">
+  </impact-dyfi-summary>
 
-<impact-dyfi-summary></impact-dyfi-summary>
+  <shared-text-product
+      *ngFor="let product of event.getProducts('impact-text')"
+      [product]="product">
+  </shared-text-product>
+
+  <ng-container *ngIf="event.hasProducts('impact-link')">
+    <h3>For More Information</h3>
+    <ul>
+    <li *ngFor="let product of event.getProducts('impact-link')">
+      <shared-link-product [product]="product">
+      </shared-link-product>
+    </li>
+    </ul>
+  </ng-container>
+</ng-container>
+
+
+
+
+
+
+
+
 <impact-shakemap-summary></impact-shakemap-summary>
 <impact-pager-summary></impact-pager-summary>
