Initial integration of beachball plotting

--- a/src/app/event-page/navigation/navigation.component.html
+++ b/src/app/event-page/navigation/navigation.component.html
@@ -33,7 +33,7 @@
   <app-navigation-group *ngIf="hasScientific(event)">
     <app-navigation-item navGroupHeader
         display="Technical" class="not-supported"
-        navRouterLink="scientific"></app-navigation-item>
+        navRouterLink="technical"></app-navigation-item>
 
     <app-navigation-item *ngIf="event.hasProducts(['origin', 'phase-data'])"
         display="Origin"
