--- a/src/app/executive/regional-pin/regional-pin.component.html
+++ b/src/app/executive/regional-pin/regional-pin.component.html
@@ -1,17 +1,9 @@
 <ng-container>
-  <mat-card [routerLink]="'../region-info'">
-    <mat-card-title>
-      {{ title }}
-    </mat-card-title>
-    <mat-card-subtitle>
-      Contributed by
-      <shared-product-attribution [product]="product"></shared-product-attribution>
-    </mat-card-subtitle>
-    <div mat-card-image id="region-info-map"></div>
-    <mat-card-actions>
-      <a mat-button color="primary" [routerLink]="'../region-info'">
-        View Regional Information
-      </a>
-    </mat-card-actions>
-  </mat-card>
+  <basic-pin
+      [title]=title
+      [link]=link
+      [action]=link
+      [type]=type>
+    <div card-image mat-card-image id="region-info-map"></div>
+  </basic-pin>
 </ng-container>
