--- a/src/app/technical/moment-tensor-summary/moment-tensor-summary.component.html
+++ b/src/app/technical/moment-tensor-summary/moment-tensor-summary.component.html
@@ -2,14 +2,67 @@
 
   <h2>Moment Tensor</h2>
 
-  <div *ngFor="let product of products">
-    <shared-beachball
-        [fillColor]="'#6ea8ff'"
-        [labelAxes]="false"
-        [labelPlanes]="false"
-        [size]="30"
-        [tensor]="getTensor(product)">
-    </shared-beachball>
-  </div>
+  <mat-table [dataSource]="this.tensors">
+    <!-- render order is defined by columnsToDisplay -->
+    <mat-header-row *matHeaderRowDef="this.columnsToDisplay"></mat-header-row>
+    <mat-row *matRowDef="let myRowData; columns: this.columnsToDisplay"></mat-row>
+
+    <ng-container matColumnDef="catalog">
+      <mat-header-cell *matHeaderCellDef>Catalog</mat-header-cell>
+      <mat-cell *matCellDef="let tensor" [class.unpreferred]="tensor !== tensors[0]">
+        <ng-container *ngIf="tensor === tensors[0]">
+          <abbr class="preferred" title="Preferred Moment Tensor"><mat-icon>check</mat-icon></abbr>
+        </ng-container>
+        {{ tensor.product.properties.eventsource.toUpperCase() }}
+      </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="tensor">
+      <mat-header-cell *matHeaderCellDef>Tensor</mat-header-cell>
+      <mat-cell *matCellDef="let tensor">
+        <shared-beachball
+            [fillColor]="'#6ea8ff'"
+            [labelAxes]="false"
+            [labelPlanes]="false"
+            [size]="30"
+            [tensor]="tensor">
+        </shared-beachball>
+      </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="magnitude">
+      <mat-header-cell *matHeaderCellDef>Magnitude</mat-header-cell>
+      <mat-cell *matCellDef="let tensor">
+        {{ formatterService.number(tensor.magnitude, 1) }}
+        {{ tensor.type }}
+      </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="depth">
+      <mat-header-cell *matHeaderCellDef>Depth</mat-header-cell>
+      <mat-cell *matCellDef="let tensor">
+        {{ formatterService.depth(tensor.depth, 'km') }}
+      </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="percentDC">
+      <mat-header-cell *matHeaderCellDef>
+        <abbr title="Percent Double Couple">% DC</abbr>
+      </mat-header-cell>
+      <mat-cell *matCellDef="let tensor">
+        {{ formatterService.number(100 * tensor.percentDC, 0) }} %
+      </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="source">
+      <mat-header-cell *matHeaderCellDef>Source</mat-header-cell>
+      <mat-cell *matCellDef="let tensor">
+        <shared-product-attribution
+            [product]="tensor.product">
+        </shared-product-attribution>
+      </mat-cell>
+    </ng-container>
+
+  </mat-table>
 
 </ng-container>
