--- a/src/app/technical/technical/technical.component.html
+++ b/src/app/technical/technical/technical.component.html
@@ -7,5 +7,21 @@
         [products]="event.getProducts('moment-tensor')">
     </technical-moment-tensor-summary>
 
+
+    <shared-text-product
+        *ngFor="let product of event.getProducts('scitech-text')"
+        [product]="product">
+    </shared-text-product>
+
+    <ng-container *ngIf="event.hasProducts('scitech-link')">
+      <h3>For More Information</h3>
+      <ul>
+      <li *ngFor="let product of event.getProducts('scitech-link')">
+        <shared-link-product [product]="product">
+        </shared-link-product>
+      </li>
+      </ul>
+    </ng-container>
+
   </ng-container>
 </ng-container>
