--- a/src/app/technical/technical/technical.component.html
+++ b/src/app/technical/technical/technical.component.html
@@ -4,6 +4,7 @@
     <technical-origin-summary></technical-origin-summary>
 
     <technical-moment-tensor-summary
+        [event]="event"
         [products]="event.getProducts('moment-tensor')">
     </technical-moment-tensor-summary>
 
