--- a/src/app/technical/technical/technical.component.html
+++ b/src/app/technical/technical/technical.component.html
@@ -1,7 +1,10 @@
 <ng-container *ngIf="eventService.event$ | async; let event">
   <ng-container *ngIf="event">
 
-    <technical-origin-summary></technical-origin-summary>
+    <technical-origin-summary
+        [event]="event"
+        [products]="event.getProducts('origin')">
+    </technical-origin-summary>
 
     <technical-moment-tensor-summary
         [event]="event"
