--- a/src/app/moment-tensor/moment-tensor/moment-tensor.component.html
+++ b/src/app/moment-tensor/moment-tensor/moment-tensor.component.html
@@ -7,11 +7,9 @@
   </ng-container>
 
   <ng-container *ngIf="tensor">
-
+    <moment-tensor-info [tensor]="tensor"></moment-tensor-info>
     <moment-tensor-nodal-planes [tensor]="tensor"></moment-tensor-nodal-planes>
-
     <moment-tensor-axes [tensor]="tensor"></moment-tensor-axes>
-
     <shared-beachball [tensor]="tensor"></shared-beachball>
   </ng-container>
 
