created shared-mmi component to format and style mmi values, updated impact module components to use shared-mmi component

--- a/src/app/impact/dyfi-summary/dyfi-summary.component.html
+++ b/src/app/impact/dyfi-summary/dyfi-summary.component.html
@@ -21,10 +21,11 @@
         {{ columnTitles.cdi }}
       </mat-header-cell>
       <mat-cell *matCellDef="let dyfi">
-        <abbr title="Community Determined Intensity"
-            [innerHTML]=" formatterService.intensity(dyfi.properties.maxmmi)">
-
+        <abbr title="Community Determined Intensity">
+          <shared-mmi [intensity]="dyfi.properties.maxmmi">
+          </shared-mmi>
         </abbr>
+
       </mat-cell>
     </ng-container>
 
