--- a/src/app/moment-tensor/moment-tensor/moment-tensor.component.html
+++ b/src/app/moment-tensor/moment-tensor/moment-tensor.component.html
@@ -10,7 +10,10 @@
     <moment-tensor-info [tensor]="tensor"></moment-tensor-info>
     <moment-tensor-nodal-planes [tensor]="tensor"></moment-tensor-nodal-planes>
     <moment-tensor-axes [tensor]="tensor"></moment-tensor-axes>
-    <shared-beachball [tensor]="tensor"></shared-beachball>
+    <shared-beachball
+        [fillColor]="'#6ea8ff'"
+        [tensor]="tensor">
+    </shared-beachball>
   </ng-container>
 
   <!-- container with footer attribute is added before downloads -->
