Update moment-tensor to have column layout on larger screens

--- a/src/app/moment-tensor/moment-tensor/moment-tensor.component.html
+++ b/src/app/moment-tensor/moment-tensor/moment-tensor.component.html
@@ -6,15 +6,20 @@
     <h3>Moment Tensor</h3>
   </ng-container>
 
-  <ng-container *ngIf="tensor">
-    <moment-tensor-info [tensor]="tensor"></moment-tensor-info>
-    <moment-tensor-nodal-planes [tensor]="tensor"></moment-tensor-nodal-planes>
-    <moment-tensor-axes [tensor]="tensor"></moment-tensor-axes>
-    <shared-beachball
-        [fillColor]="'#6ea8ff'"
-        [tensor]="tensor">
-    </shared-beachball>
-  </ng-container>
+  <div class="row" *ngIf="tensor">
+    <div class="column">
+      <moment-tensor-info [tensor]="tensor"></moment-tensor-info>
+      <moment-tensor-nodal-planes [tensor]="tensor"></moment-tensor-nodal-planes>
+      <moment-tensor-axes [tensor]="tensor"></moment-tensor-axes>
+    </div>
+
+    <div class="column">
+      <shared-beachball
+          [fillColor]="'#6ea8ff'"
+          [tensor]="tensor">
+      </shared-beachball>
+    </div>
+  </div>
 
   <!-- container with footer attribute is added before downloads -->
   <ng-container footer>
