createwd alert level component, updated test, removed mmi and intensity from formatter

--- a/src/app/impact/pager-summary/pager-summary.component.html
+++ b/src/app/impact/pager-summary/pager-summary.component.html
@@ -21,7 +21,8 @@
         {{ columnTitles.alertlevel }}
       </mat-header-cell>
       <mat-cell *matCellDef="let pager">
-      {{ pager.properties.alertlevel }}
+        <shared-alert-level [alert]="pager.properties.alertlevel">
+        </shared-alert-level>
       </mat-cell>
     </ng-container>
 
