updated to use product attribution and rebased

--- a/src/app/impact/dyfi-summary/dyfi-summary.component.html
+++ b/src/app/impact/dyfi-summary/dyfi-summary.component.html
@@ -43,7 +43,8 @@
         {{ columnTitles.source }}
       </mat-header-cell>
       <mat-cell *matCellDef="let dyfi">
-        {{ dyfi.source }}
+        <shared-product-attribution [product]="dyfi">
+        </shared-product-attribution>
       </mat-cell>
     </ng-container>
 
