--- a/src/app/impact/pager-summary/pager-summary.component.html
+++ b/src/app/impact/pager-summary/pager-summary.component.html
@@ -31,7 +31,8 @@
         {{ columnTitles.source }}
       </mat-header-cell>
       <mat-cell *matCellDef="let pager">
-        {{ pager.source }}
+        <shared-product-attribution [product]="pager">
+        </shared-product-attribution>
       </mat-cell>
     </ng-container>
 
