updated moment tensor and origin to use preferred component, removed styles that are no longer needed

--- a/src/app/technical/moment-tensor-summary/moment-tensor-summary.component.html
+++ b/src/app/technical/moment-tensor-summary/moment-tensor-summary.component.html
@@ -11,7 +11,8 @@
       <mat-header-cell *matHeaderCellDef>Catalog</mat-header-cell>
       <mat-cell *matCellDef="let tensor" [class.unpreferred]="tensor !== tensors[0]">
         <ng-container *ngIf="tensor === tensors[0]">
-          <abbr class="preferred" title="Preferred Moment Tensor"><mat-icon>check</mat-icon></abbr>
+          <shared-preferred-check [TITLE]="'Preferred Moment Tensor'">
+          </shared-preferred-check>
         </ng-container>
         <a
             [routerLink]="['/', event?.id, 'moment-tensor']"
