--- a/src/app/shared/preferred-check/preferred-check.component.css
+++ b/src/app/shared/preferred-check/preferred-check.component.css
@@ -1,8 +1,4 @@
-.preferred > .mat-icon {
-  font-weight: bold;
-}
-
-.preferred mat-icon {
+.preferred > mat-icon {
   color: #0c0;
   font-size: 16px;
   font-weight: bold;
