--- a/src/app/technical/origin-summary/origin-summary.component.html
+++ b/src/app/technical/origin-summary/origin-summary.component.html
@@ -11,7 +11,7 @@
       <mat-header-cell *matHeaderCellDef>Catalog</mat-header-cell>
       <mat-cell *matCellDef="let product" [class.unpreferred]="product !== products[0]">
         <ng-container *ngIf="product === products[0]">
-          <shared-preferred-check [TITLE]="'Preferred Origin'">
+          <shared-preferred-check [title]="'Preferred Origin'">
           </shared-preferred-check>
         </ng-container>
         <a
