Remove whitespace that affected layout

--- a/src/app/shared/preferred-check/preferred-check.component.html
+++ b/src/app/shared/preferred-check/preferred-check.component.html
@@ -1,5 +1,1 @@
-<abbr class="preferred" [title]="title">
-  <mat-icon>
-    check
-  </mat-icon>
-</abbr>
+<abbr class="preferred" [title]="title"><mat-icon>check</mat-icon></abbr>
