Initial station list working

--- a/src/app/shakemap/shakemap/shakemap.component.html
+++ b/src/app/shakemap/shakemap/shakemap.component.html
@@ -1,5 +1,5 @@
 <!-- productType attribute defines type of product to load -->
-<product-page productType="origin">
+<product-page productType="shakemap">
 
   <!-- container with header attribute is added before attribution -->
   <ng-container header>
