Testing running for new components

--- a/src/app/shared/station/station.component.html
+++ b/src/app/shared/station/station.component.html
@@ -1,4 +1,4 @@
-    <div class="station">
+    <div class="station" *ngIf="station">
         <h3 class="station-name">
             {{ station.properties.code }}: {{ station.properties.name }}
         </h3>
