updated to use preferred check component, updated test, added styles for unpreferred

--- a/src/app/impact/dyfi-summary/dyfi-summary.component.css
+++ b/src/app/impact/dyfi-summary/dyfi-summary.component.css
@@ -1,1 +1,7 @@
-
+/* same amount of space as preferred icon */
+mat-cell.unpreferred:before {
+  content: ' ';
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+}
