--- a/src/app/impact/dyfi-summary/dyfi-summary.component.html
+++ b/src/app/impact/dyfi-summary/dyfi-summary.component.html
@@ -10,7 +10,8 @@
       </mat-header-cell>
       <mat-cell *matCellDef="let dyfi">
         <ng-container *ngIf="dyfi === products[0]">
-          <abbr class="preferred" title="Preferred"><mat-icon>done</mat-icon></abbr>
+          <shared-preferred-check [title]="'Preferred DYFI'">
+          </shared-preferred-check>
         </ng-container>
         {{ dyfi.properties.eventsource }}
       </mat-cell>
