--- a/src/app/shared/product-attribution/product-attribution.component.html
+++ b/src/app/shared/product-attribution/product-attribution.component.html
@@ -1,13 +1,3 @@
-<ng-container *ngIf="eventService.event$ | async; let event">
-  <ng-container *ngIf="contributorService.contributors$ | async; let contributors">
-    <span *ngFor="let source of getSources(product, event, contributors)">
-      <abbr *ngIf="source.details; else noDetails" [title]="source.details.title">
-        {{ source.id }}
-      </abbr>
-      <ng-template #noDetails>
-        {{ source.id }}
-      </ng-template>
-      <sup>{{ source.index }}</sup>
-    </span>
-  </ng-container>
-</ng-container>
+<span *ngFor="let source of getSources(product)">
+  <shared-attribution [sourceCode]="source"></shared-attribution>
+</span>
